@@ -1,3 +1,8 @@
+2005-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer.pm (newCacheFileName): MD5 to generate
+	unique file names
+
 2005-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* configure.ac (also in all plugins): AM_INIT_AUTOMAKE(1.9)
